--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lottie-react": "^2.4.1",
     "normalize.css": "^8.0.1",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
