--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "framer-motion": "^12.23.24",
     "lottie-react": "^2.4.1",
     "normalize.css": "^8.0.1",
     "react": "^19.1.1",
