chore: добавить алиасы путей для ts

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -16,6 +16,17 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"],
+      "@assets/*": ["./src/assets/*"],
+      "@shared/*": ["./src/shared/*"],
+      "@components/*": ["./src/components/*"],
+      "@screens/*": ["./src/screens/*"],
+      "@game-logic/*": ["./src/game-logic/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
